# X2Blend

./: .gitignore  CMakeLists.txt  README.md  build.sh  higurashi_daybreak_models_documentation.md  x2blend.sh
docs/: ANALYSIS.md  ARCHITECTURE.md  X_FORMAT_RESEARCH.md
scripts/: blend_importer.py  verify_animation_poses.py  verify_bones.py
scripts/blend_importer/: __init__.py  __main__.py  animation.py  armature.py  bone_axis.py  config.py  main.py  materials.py  math_utils.py  mesh.py  scene.py
scripts/verify/: verify_animation_poses.py  verify_bones.py
src/: json_exporter.cpp  json_exporter.h  main.cpp  middleman.cpp  middleman.h  viewer.cpp  x_loader.cpp  x_loader.h
src/core/: codec.cpp  codec.h  coord.cpp  coord.h  log.cpp  log.h  middleman.cpp  middleman.h  x_math.cpp  x_math.h
src/d3d/: d3d_context.cpp  d3d_context.h  hierarchy_allocator.cpp  hierarchy_allocator.h
src/io/: json_exporter.cpp  json_exporter.h  x_file_preprocessor.cpp  x_file_preprocessor.h
src/loader/: animation_baker.cpp  animation_baker.h  hierarchy_builder.cpp  hierarchy_builder.h  mesh_extractor.cpp  mesh_extractor.h  x_loader.cpp  x_loader.h
src/viewer/: viewer.cpp
tests/: README.md
tests/cpp/: test_coord.cpp  test_json_exporter.cpp  test_x_math.cpp
tests/fixtures/: minimal.x
tests/python/: test_animation.py  test_bone_axis.py  test_materials.py  test_math_utils.py  test_texture_path.py
